Grid gutter achieved correctly; using grid-gap over padding

--- a/src/components/utils/Grid/Grid.module.scss
+++ b/src/components/utils/Grid/Grid.module.scss
@@ -8,15 +8,11 @@
 
 // Ensure these settings are configured before the @import of this file.
 $grid-column-number: 12 !default;
-$grid-column-gap: 80px !default;
+$grid-gap: 80px !default;
 
 .grid {
-  margin-left: -(rem-calc($grid-column-gap));
+  grid-gap: $grid-gap;
   @include gridWithFallback;
-
-  .gridItem {
-    padding-left: rem-calc($grid-column-gap);
-  }
 }
 
 /* Style variants
